# google-scholar-scraper

./: .gitignore  LICENSE  pyproject.toml
src/: google_articles.py  logger.py  main.py
